# CrazyProj

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Crazy.cpp  Doxyfile  Sandbox.cpp  pch.hpp  vcpkg.json
crazy-cppcheck-build-dir/: Crazy.a1  Crazy.cpp.snalyzerinfo  GLFWWindow.a1  GLFWWindow.cpp.snalyzerinfo  ImGuiLayer.a1  ImGuiLayer.cpp.snalyzerinfo  TextureImporter.a1  cmake_pch.a1  files.txt  imnodes.a1  lastResults.xml  mainCar.a1  mainCar.cpp.snalyzerinfo  mainWindow.a1  mainWindow.cpp.snalyzerinfo  multi_editor.a1  multi_editor.cpp.snalyzerinfo  statistics.txt
include/: Crazy.hpp  CrazyWindow.hpp  ICrazy.hpp
proj/: CMakeLists.txt
tests/: CMakeLists.txt
tests/car/: Car.hpp  ElectricCar.hpp  ICar.hpp  mainCar.cpp
tests/window/: DX9Renderer.cpp  DX9Renderer.h  GLADRenderer.cpp  GLADRenderer.h  GLFWWindow.cpp  GLFWWindow.h  GLFWWindow.hpp  GLImageImporter.cpp  GLImageImporter.hpp  GLTexture.hpp  IImGuiHandler.hpp  IImageImporter.hpp  IPanel.hpp  IRenderer.h  IRenderer.hpp  ITexture.hpp  IWindow.h  IWindow.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Project.cpp  Project.hpp  TextureImporter.cpp  TextureImporter.hpp  Win32Window.cpp  Win32Window.h  Win32Window.hpp  mainWindow.cpp
